phase2_Dev/src/objects/VisitItemsStaging__c.object
<CustomObject>
    <description>Staging object used to load Differential Licensing Tools</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <label>Guidance</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsRandomItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRandomItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the record is processed without any errors.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProviderType__c</fullName>
        <label>ProviderType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RandomItemDomain__c</fullName>
        <label>RandomItemDomain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitItemDomain__c</fullName>
        <label>VisitItemDomain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitItemRegulation__c</fullName>
        <label>VisitItemRegulation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitItemToolAssignment__c</fullName>
        <label>VisitItemToolAssignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>VisitItemsStaging</label>
    <listViews>
        <fullName>Adoption_Enhanced_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>Adoption Enhanced Monitoring Tool</value>
        </filters>
        <label>Adoption Enhanced Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>Adoption_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>Adoption Monitoring Tool</value>
        </filters>
        <label>Adoption Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>FCC_Enhanced_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <columns>To_Delete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>FCC Enhanced Monitoring Tool</value>
        </filters>
        <filters>
            <field>To_Delete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>FCC - Enhanced Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>FCC_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <columns>To_Delete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>FCC Monitoring Tool</value>
        </filters>
        <filters>
            <field>To_Delete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>FCC - Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>FCC_Progress_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>To_Delete__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>FCC Progress Tool</value>
        </filters>
        <filters>
            <field>To_Delete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>FCC - Progress Tool</label>
    </listViews>
    <listViews>
        <fullName>Foster_Care_Enhanced_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>Foster Care Enhanced Monitoring Tool</value>
        </filters>
        <label>Foster Care Enhanced Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>Foster_Care_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>Foster Care Monitoring Tool</value>
        </filters>
        <label>Foster Care Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>GSA_Enhanced_Monitoring</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>To_Delete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>contains</operation>
            <value>GSA Enhanced Monitoring Tool</value>
        </filters>
        <label>GSA - Enhanced Monitoring</label>
    </listViews>
    <listViews>
        <fullName>GSA_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>To_Delete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>GSA Monitoring Tool</value>
        </filters>
        <label>GSA - Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>Residential_Enhanced_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>Residential Enhanced Monitoring Tool</value>
        </filters>
        <label>Residential - Enhanced Monitoring Tool</label>
    </listViews>
    <listViews>
        <fullName>Residential_Monitoring_Tool</fullName>
        <columns>NAME</columns>
        <columns>ProviderType__c</columns>
        <columns>VisitItemToolAssignment__c</columns>
        <columns>VisitItemRegulation__c</columns>
        <columns>RandomItemDomain__c</columns>
        <columns>Processed__c</columns>
        <columns>Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisitItemToolAssignment__c</field>
            <operation>equals</operation>
            <value>Residential Monitoring Tool</value>
        </filters>
        <label>Residential - Monitoring Tool</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VisitItemsStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>